<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        	
        	<TextView
        	    android:text="@string/name"
        	    android:layout_weight="1" />
        	
        	<TextView
        	    android:text="@string/scale"
        	    android:layout_weight="1" />
        	
        </TableRow>

    </TableLayout>
    
    <TextView
        android:id="@+id/sqlinfo"
        android:text="@string/get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
  
</LinearLayout>